results/SVCOMP/0-shot/log-assert3-2024_03_18_23_13_18.txt
class assert3 {

  //@ requires true;
  //@ ensures true;
  public static void func() {
    int i = Verifier.nondetInt();

    //@ assume i >= 1000;
    if (i >= 1000) {
      //@ assume !(i > 1000);
      if (!(i > 1000)) {
        assert false;
      }
    }
  }
  
}
/home/max/Documents/JMLGPT/tmp/assert3.java:6: error: cannot find symbol
    int i = Verifier.nondetInt();
            ^
  symbol:   variable Verifier
  location: class assert3
1 error

